src/test/ui/type-check-defaults.stderr
error[E0277]: the trait bound `i32: std::iter::FromIterator<i32>` is not satisfied
  --> $DIR/type-check-defaults.rs:16:19
   |
16 | struct WellFormed<Z = Foo<i32, i32>>(Z);
   |                   ^ a collection of type `i32` cannot be built from an iterator over elements of type `i32`
   |
   = help: the trait `std::iter::FromIterator<i32>` is not implemented for `i32`
note: required by `Foo`
  --> $DIR/type-check-defaults.rs:15:1
   |
15 | struct Foo<T, U: FromIterator<T>>(T, U);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `i32: std::iter::FromIterator<i32>` is not satisfied
  --> $DIR/type-check-defaults.rs:18:27
   |
18 | struct WellFormedNoBounds<Z:?Sized = Foo<i32, i32>>(Z);
   |                           ^ a collection of type `i32` cannot be built from an iterator over elements of type `i32`
   |
   = help: the trait `std::iter::FromIterator<i32>` is not implemented for `i32`
note: required by `Foo`
  --> $DIR/type-check-defaults.rs:15:1
   |
15 | struct Foo<T, U: FromIterator<T>>(T, U);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `A: std::iter::Iterator` is not satisfied
  --> $DIR/type-check-defaults.rs:21:1
   |
21 | struct WellFormedProjection<A, T=<A as Iterator>::Item>(A, T);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `A` is not an iterator; maybe try calling `.iter()` or a similar method
   |
   = help: the trait `std::iter::Iterator` is not implemented for `A`
   = help: consider adding a `where A: std::iter::Iterator` bound

error[E0277]: the trait bound `std::string::String: std::marker::Copy` is not satisfied
  --> $DIR/type-check-defaults.rs:24:1
   |
24 | struct Bounds<T:Copy=String>(T);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `std::string::String`
   |
   = note: required by `std::marker::Copy`

error[E0277]: the trait bound `std::string::String: std::marker::Copy` is not satisfied
  --> $DIR/type-check-defaults.rs:27:1
   |
27 | struct WhereClause<T=String>(T) where T: Copy;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `std::string::String`
   |
   = note: required by `std::marker::Copy`

error[E0277]: the trait bound `std::string::String: std::marker::Copy` is not satisfied
  --> $DIR/type-check-defaults.rs:30:1
   |
30 | trait TraitBound<T:Copy=String> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `std::string::String`
   |
   = note: required by `std::marker::Copy`

error[E0277]: the trait bound `Self: std::marker::Copy` is not satisfied
  --> $DIR/type-check-defaults.rs:33:1
   |
33 | trait SelfBound<T:Copy=Self> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `Self`
   |
   = help: consider adding a `where Self: std::marker::Copy` bound
   = note: required by `std::marker::Copy`

error[E0277]: the trait bound `T: std::marker::Copy` is not satisfied
  --> $DIR/type-check-defaults.rs:37:1
   |
37 | trait Base<T = String>: Super<T> { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `T`
   |
   = help: consider adding a `where T: std::marker::Copy` bound
note: required by `Super`
  --> $DIR/type-check-defaults.rs:36:1
   |
36 | trait Super<T: Copy> { }
   | ^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `i32: Trait<U>` is not satisfied
  --> $DIR/type-check-defaults.rs:41:1
   |
41 | struct DefaultedLhs<U, V=i32>(U, V) where V: Trait<U>;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Trait<U>` is not implemented for `i32`
   |
note: required by `Trait`
  --> $DIR/type-check-defaults.rs:40:1
   |
40 | trait Trait<T> {}
   | ^^^^^^^^^^^^^^

error: aborting due to 9 previous errors

